Mejoras en la illumination correction

--- a/Processing/02_Visualization/Scripts/Napari.ipynb
+++ b/Processing/02_Visualization/Scripts/Napari.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "66202919-70c1-41b0-9ba0-cb45a42bd58a",
    "metadata": {
     "jupyter": {
@@ -29,16 +29,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (635086583.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    conda create -y -n napari-env -c conda-forge python=3.9\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Downloading Napari for the first time\n",
     "conda create -y -n napari-env -c conda-forge python=3.9\n",
@@ -59,20 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dd02aef7-82f8-4182-a95a-91c629ca92c4",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running SCIMAP  2.1.3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Dependencies needed\n",
     "try:\n",
@@ -111,19 +94,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f239df69-76b6-48c2-9a00-abf498b91109",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<napari._qt.widgets.qt_viewer_dock_widget.QtViewerDockWidget at 0x71f0750ab040>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/napari/layers/utils/stack_utils.py\", line 147, in split_channels\n",
+      "    i_kwargs[key] = next(val)\n",
+      "StopIteration\n",
+      "\n",
+      "The above exception was the direct cause of the following exception:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"src/psygnal/_signal.py\", line 1196, in _run_emit_loop\n",
+      "  File \"src/psygnal/_signal.py\", line 1225, in _run_emit_loop_immediate\n",
+      "  File \"src/psygnal/_weak_callback.py\", line 354, in cb\n",
+      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/magicgui/widgets/_function_gui.py\", line 228, in _disable_button_and_call\n",
+      "    self.__call__()\n",
+      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/magicgui/widgets/_function_gui.py\", line 346, in __call__\n",
+      "    value = self._function(*bound.args, **bound.kwargs)\n",
+      "  File \"/tmp/ipykernel_11072/3819837565.py\", line 26, in open_large_image\n",
+      "    viewer.add_image(\n",
+      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/napari/utils/migrations.py\", line 101, in _update_from_dict\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/napari/components/viewer_model.py\", line 994, in add_image\n",
+      "    layerdata_list = split_channels(data, channel_axis, **kwargs)\n",
+      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/napari/layers/utils/stack_utils.py\", line 149, in split_channels\n",
+      "    raise IndexError(\n",
+      "IndexError: Error adding multichannel image with data shape (200, 2560, 2560).\n",
+      "Requested channel_axis (0) had length 200, but the 'name' argument only provided 31 values. \n",
+      "\n",
+      "The above exception was the direct cause of the following exception:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/magicgui/widgets/bases/_value_widget.py\", line 71, in _on_value_change\n",
+      "    self.changed.emit(value)\n",
+      "  File \"src/psygnal/_signal.py\", line 1176, in emit\n",
+      "  File \"src/psygnal/_signal.py\", line 1213, in _run_emit_loop\n",
+      "  File \"src/psygnal/_signal.py\", line 1196, in _run_emit_loop\n",
+      "  File \"src/psygnal/_signal.py\", line 1225, in _run_emit_loop_immediate\n",
+      "  File \"src/psygnal/_weak_callback.py\", line 354, in cb\n",
+      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/magicgui/widgets/_function_gui.py\", line 228, in _disable_button_and_call\n",
+      "    self.__call__()\n",
+      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/magicgui/widgets/_function_gui.py\", line 346, in __call__\n",
+      "    value = self._function(*bound.args, **bound.kwargs)\n",
+      "  File \"/tmp/ipykernel_11072/3819837565.py\", line 26, in open_large_image\n",
+      "    viewer.add_image(\n",
+      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/napari/utils/migrations.py\", line 101, in _update_from_dict\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/napari/components/viewer_model.py\", line 994, in add_image\n",
+      "    layerdata_list = split_channels(data, channel_axis, **kwargs)\n",
+      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/napari/layers/utils/stack_utils.py\", line 149, in split_channels\n",
+      "    raise IndexError(\n",
+      "psygnal._exceptions.EmitLoopError: \n",
+      "\n",
+      "While emitting signal 'magicgui.widgets.PushButton.changed', a IndexError occurred in a callback:\n",
+      "\n",
+      "  Signal emitted at: /home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/magicgui/widgets/bases/_value_widget.py:71, in _on_value_change\n",
+      "    >  self.changed.emit(value)\n",
+      "\n",
+      "  Callback error at: /home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/napari/layers/utils/stack_utils.py:149, in split_channels\n",
+      "    >  raise IndexError(\n",
+      "\n",
+      "    Local variables:\n",
+      "       kwargs = {'rgb': repeat(None), 'axis_labels': repeat(None), 'colormap...\n",
+      "       multiscale = False\n",
+      "       n_channels = 200\n",
+      "       iterable_kwargs = {'experimental_clipping_planes', 'units', 'axis_labels', 'tr...\n",
+      "       key = 'name'\n",
+      "       val = <list_iterator object at 0x72129d5e1910>\n",
+      "       layerdata_list = [(dask.array<getitem, shape=(2560, 2560), dtype=uint16, chun...\n",
+      "       image = dask.array<getitem, shape=(2560, 2560), dtype=uint16, chunks...\n",
+      "       i_kwargs = {'rgb': None, 'axis_labels': None, 'colormap': 'yellow', 'co...\n",
+      "       layerdata = (dask.array<getitem, shape=(2560, 2560), dtype=uint16, chunk...\n",
+      "       channel_axis = 0\n",
+      "       data = dask.array<from-zarr, shape=(200, 2560, 2560), dtype=uint16,...\n",
+      "       i = 31\n",
+      "\n",
+      "See IndexError above for original traceback.\n"
+     ]
     }
    ],
    "source": [
@@ -394,11 +447,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "03449c5e-7c68-4334-92f7-66f3d7b10768",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error reading channel names: [Errno 21] Is a directory: '.'\n",
+      "Channel count mismatch. Generating default names for 4 channels\n",
+      "Successfully loaded 4-channel image with 1 pyramid levels\n"
+     ]
+    }
+   ],
+   "source": [
+    "import napari\n",
+    "import zarr\n",
+    "import dask.array as da\n",
+    "import tifffile as tiff\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "from magicgui import magicgui\n",
+    "\n",
+    "# Initialize Napari viewer\n",
+    "viewer = napari.Viewer()\n",
+    "\n",
+    "@magicgui(call_button='Open Image', layout='vertical')\n",
+    "def open_image(\n",
+    "    image_path: Path = Path(), \n",
+    "    channel_names_csv: Path = Path(),\n",
+    "    contrast_limits_file: Path = Path('.')\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Open a multi-channel image in Napari with channel names\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - image_path: Path to TIFF image\n",
+    "    - channel_names_csv: CSV file with 'ABS' column for channel names\n",
+    "    - contrast_limits_file: Optional contrast limits file\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Read channel names from CSV\n",
+    "    try:\n",
+    "        df_channels = pd.read_csv(channel_names_csv)\n",
+    "        channel_names = list(df_channels[\"ABS\"])\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error reading channel names: {e}\")\n",
+    "        channel_names = []\n",
+    "    \n",
+    "    # Open TIFF file\n",
+    "    try:\n",
+    "        tiff_file = tiff.TiffFile(image_path)\n",
+    "        zarr_store = zarr.open(tiff_file.aszarr(), mode='r')\n",
+    "        \n",
+    "        # Handle pyramid images\n",
+    "        n_levels = len(tiff_file.series[0].levels)\n",
+    "        if n_levels > 1:\n",
+    "            pyramid = [da.from_zarr(zarr_store[i]) for i in range(n_levels)]\n",
+    "            multiscale = True\n",
+    "            n_channels = pyramid[0].shape[0]\n",
+    "        else:\n",
+    "            pyramid = da.from_zarr(zarr_store)\n",
+    "            multiscale = False\n",
+    "            n_channels = pyramid.shape[0]\n",
+    "            \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error opening image: {e}\")\n",
+    "        return\n",
+    "    \n",
+    "    # Generate default names if channel count mismatch\n",
+    "    if len(channel_names) != n_channels:\n",
+    "        print(f\"Channel count mismatch. Generating default names for {n_channels} channels\")\n",
+    "        channel_names = [f\"Channel_{i:03d}\" for i in range(n_channels)]\n",
+    "    \n",
+    "    # Load contrast limits if provided\n",
+    "    contrast_limits = None\n",
+    "    if str(contrast_limits_file) != '.':\n",
+    "        try:\n",
+    "            with open(contrast_limits_file, 'r') as f:\n",
+    "                contrast_limits = eval(f.read())\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error loading contrast limits: {e}\")\n",
+    "    \n",
+    "    # Add to viewer\n",
+    "    viewer.add_image(\n",
+    "        pyramid if multiscale else [pyramid],\n",
+    "        channel_axis=0,\n",
+    "        name=channel_names,\n",
+    "        contrast_limits=contrast_limits,\n",
+    "        multiscale=multiscale,\n",
+    "        visible=False\n",
+    "    )\n",
+    "    \n",
+    "    print(f\"Successfully loaded {n_channels}-channel image with {n_levels} pyramid levels\")\n",
+    "\n",
+    "# Add widget to viewer\n",
+    "viewer.window.add_dock_widget(open_image)\n",
+    "\n",
+    "# Start Napari\n",
+    "if __name__ == \"__main__\":\n",
+    "    napari.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5cc726e0-3a23-4aa3-a6fc-3ed81ac51e5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error reading channel names: [Errno 21] Is a directory: '.'\n",
+      "Generating default names for 4 channels\n",
+      "Loaded mask with shape (2560, 2560)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import napari\n",
+    "import zarr\n",
+    "import dask.array as da\n",
+    "import tifffile as tiff\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "from magicgui import magicgui\n",
+    "\n",
+    "# Initialize Napari viewer\n",
+    "viewer = napari.Viewer()\n",
+    "\n",
+    "@magicgui(call_button='Open Image', layout='vertical')\n",
+    "def open_image(\n",
+    "    image_path: Path = Path(), \n",
+    "    channel_names_csv: Path = Path(),\n",
+    "    contrast_limits_file: Path = Path('.')\n",
+    "):\n",
+    "    \"\"\"Open a multi-channel image with channel names and optional contrast limits\"\"\"\n",
+    "    try:\n",
+    "        # Read channel names\n",
+    "        df_channels = pd.read_csv(channel_names_csv)\n",
+    "        channel_names = list(df_channels[\"ABS\"])\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error reading channel names: {e}\")\n",
+    "        channel_names = []\n",
+    "    \n",
+    "    try:\n",
+    "        # Open image file\n",
+    "        tiff_file = tiff.TiffFile(image_path)\n",
+    "        zarr_store = zarr.open(tiff_file.aszarr(), mode='r')\n",
+    "        \n",
+    "        # Handle pyramid images\n",
+    "        n_levels = len(tiff_file.series[0].levels)\n",
+    "        if n_levels > 1:\n",
+    "            pyramid = [da.from_zarr(zarr_store[i]) for i in range(n_levels)]\n",
+    "            multiscale = True\n",
+    "            n_channels = pyramid[0].shape[0]\n",
+    "        else:\n",
+    "            pyramid = da.from_zarr(zarr_store)\n",
+    "            multiscale = False\n",
+    "            n_channels = pyramid.shape[0]\n",
+    "            \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error opening image: {e}\")\n",
+    "        return\n",
+    "    \n",
+    "    # Generate default names if needed\n",
+    "    if len(channel_names) != n_channels:\n",
+    "        print(f\"Generating default names for {n_channels} channels\")\n",
+    "        channel_names = [f\"Channel_{i:03d}\" for i in range(n_channels)]\n",
+    "    \n",
+    "    # Load contrast limits if provided\n",
+    "    contrast_limits = None\n",
+    "    if str(contrast_limits_file) != '.':\n",
+    "        try:\n",
+    "            with open(contrast_limits_file, 'r') as f:\n",
+    "                contrast_limits = eval(f.read())\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error loading contrast limits: {e}\")\n",
+    "    \n",
+    "    # Add to viewer\n",
+    "    viewer.add_image(\n",
+    "        pyramid if multiscale else [pyramid],\n",
+    "        channel_axis=0,\n",
+    "        name=channel_names,\n",
+    "        contrast_limits=contrast_limits,\n",
+    "        multiscale=multiscale,\n",
+    "        visible=False\n",
+    "    )\n",
+    "\n",
+    "@magicgui(call_button='Open Mask', layout='vertical')\n",
+    "def open_mask(mask_path: Path = Path()):\n",
+    "    \"\"\"Open a segmentation mask as labels layer\"\"\"\n",
+    "    try:\n",
+    "        mask = tiff.imread(mask_path)\n",
+    "        \n",
+    "        # Handle 3D masks (Z, Y, X) by taking first slice\n",
+    "        if len(mask.shape) > 2 and mask.shape[0] > 1:\n",
+    "            mask = mask[0]\n",
+    "            \n",
+    "        viewer.add_labels(\n",
+    "            mask,\n",
+    "            name='MASK',\n",
+    "            opacity=0.6,\n",
+    "            blending='translucent'\n",
+    "        )\n",
+    "        print(f\"Loaded mask with shape {mask.shape}\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error loading mask: {e}\")\n",
+    "\n",
+    "# Add widgets to viewer\n",
+    "viewer.window.add_dock_widget(open_image)\n",
+    "viewer.window.add_dock_widget(open_mask)\n",
+    "\n",
+    "# Start Napari\n",
+    "if __name__ == \"__main__\":\n",
+    "    napari.run()"
+   ]
   }
  ],
  "metadata": {
