--- a/Processing/outdated files/Napari-TMA.ipynb
+++ b/Processing/outdated files/Napari-TMA.ipynb
@@ -66,6 +66,17 @@
      "text": [
       "Running SCIMAP  2.1.3\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-10 12:04:03.362092: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-04-10 12:04:03.376703: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-04-10 12:04:03.381621: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-04-10 12:04:03.392594: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
     }
    ],
    "source": [
@@ -123,173 +134,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f239df69-76b6-48c2-9a00-abf498b91109",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<napari._qt.widgets.qt_viewer_dock_widget.QtViewerDockWidget at 0x71a51057c670>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading FAHNSCC_14__annotated.csv\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/pandas/core/indexes/base.py\", line 3805, in get_loc\n",
-      "    return self._engine.get_loc(casted_key)\n",
-      "  File \"index.pyx\", line 167, in pandas._libs.index.IndexEngine.get_loc\n",
-      "  File \"index.pyx\", line 196, in pandas._libs.index.IndexEngine.get_loc\n",
-      "  File \"pandas/_libs/hashtable_class_helper.pxi\", line 7081, in pandas._libs.hashtable.PyObjectHashTable.get_item\n",
-      "  File \"pandas/_libs/hashtable_class_helper.pxi\", line 7089, in pandas._libs.hashtable.PyObjectHashTable.get_item\n",
-      "KeyError: 'ROI'\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"src/psygnal/_signal.py\", line 1196, in _run_emit_loop\n",
-      "  File \"src/psygnal/_signal.py\", line 1225, in _run_emit_loop_immediate\n",
-      "  File \"src/psygnal/_weak_callback.py\", line 354, in cb\n",
-      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/magicgui/widgets/_function_gui.py\", line 228, in _disable_button_and_call\n",
-      "    self.__call__()\n",
-      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/magicgui/widgets/_function_gui.py\", line 346, in __call__\n",
-      "    value = self._function(*bound.args, **bound.kwargs)\n",
-      "  File \"/tmp/ipykernel_19060/2355833237.py\", line 129, in view_metadata\n",
-      "    available_phenotypes = list(adata.obs[metadata_column].unique())\n",
-      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/pandas/core/frame.py\", line 4102, in __getitem__\n",
-      "    indexer = self.columns.get_loc(key)\n",
-      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/pandas/core/indexes/base.py\", line 3812, in get_loc\n",
-      "    raise KeyError(key) from err\n",
-      "KeyError: 'ROI'\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/magicgui/widgets/bases/_value_widget.py\", line 71, in _on_value_change\n",
-      "    self.changed.emit(value)\n",
-      "  File \"src/psygnal/_signal.py\", line 1176, in emit\n",
-      "  File \"src/psygnal/_signal.py\", line 1213, in _run_emit_loop\n",
-      "  File \"src/psygnal/_signal.py\", line 1196, in _run_emit_loop\n",
-      "  File \"src/psygnal/_signal.py\", line 1225, in _run_emit_loop_immediate\n",
-      "  File \"src/psygnal/_weak_callback.py\", line 354, in cb\n",
-      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/magicgui/widgets/_function_gui.py\", line 228, in _disable_button_and_call\n",
-      "    self.__call__()\n",
-      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/magicgui/widgets/_function_gui.py\", line 346, in __call__\n",
-      "    value = self._function(*bound.args, **bound.kwargs)\n",
-      "  File \"/tmp/ipykernel_19060/2355833237.py\", line 129, in view_metadata\n",
-      "    available_phenotypes = list(adata.obs[metadata_column].unique())\n",
-      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/pandas/core/frame.py\", line 4102, in __getitem__\n",
-      "    indexer = self.columns.get_loc(key)\n",
-      "  File \"/home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/pandas/core/indexes/base.py\", line 3812, in get_loc\n",
-      "    raise KeyError(key) from err\n",
-      "psygnal._exceptions.EmitLoopError: \n",
-      "\n",
-      "While emitting signal 'magicgui.widgets.PushButton.changed', a KeyError occurred in a callback:\n",
-      "\n",
-      "  Signal emitted at: /home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/magicgui/widgets/bases/_value_widget.py:71, in _on_value_change\n",
-      "    >  self.changed.emit(value)\n",
-      "\n",
-      "  Callback error at: /home/cruz-osuna/anaconda3/envs/napari-env/lib/python3.9/site-packages/pandas/core/indexes/base.py:3812, in get_loc\n",
-      "    >  raise KeyError(key) from err\n",
-      "\n",
-      "    Local variables:\n",
-      "       key = 'ROI'\n",
-      "       casted_key = 'ROI'\n",
-      "\n",
-      "See KeyError above for original traceback.\n"
+      "WARNING: Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading FAHNSCC_14__annotated.csv\n",
-      "INFO: Haz clic en la imagen para escoger el centro...\n",
-      "Botón 'Seleccionar centro con click' presionado. Registrando callback...\n",
-      "Callback get_click ADJUNTADO a image_layer.mouse_drag_callbacks\n",
-      "INFO: Haz clic en la imagen para escoger el centro...\n",
-      "Botón 'Seleccionar centro con click' presionado. Registrando callback...\n",
-      "Callback get_click ADJUNTADO a image_layer.mouse_drag_callbacks\n",
-      "** get_click callback llamado con event=mouse_press, button=1\n",
-      "INFO: Coordenadas asignadas: X=6768.08, Y=2611.60\n",
-      "[INFO] Coordenadas asignadas: X=6768.08, Y=2611.60\n",
-      "Callback removido. Si quieres volver a escoger el centro, pulsa el botón otra vez.\n",
-      "INFO: Círculo creado en torno a (6768.08, 2611.60) con radio=554.93.\n",
-      "Total de células consideradas: 1000 (de 81305).\n",
-      "Círculo 'dysplasia_FA_HN14_1' creado. Radio aprox: 554.93\n",
-      "** get_click callback llamado con event=mouse_press, button=1\n",
-      "INFO: Coordenadas asignadas: X=7610.42, Y=4103.87\n",
-      "[INFO] Coordenadas asignadas: X=7610.42, Y=4103.87\n",
-      "Callback removido. Si quieres volver a escoger el centro, pulsa el botón otra vez.\n",
-      "INFO: Haz clic en la imagen para escoger el centro...\n",
-      "Botón 'Seleccionar centro con click' presionado. Registrando callback...\n",
-      "Callback get_click ADJUNTADO a image_layer.mouse_drag_callbacks\n",
-      "** get_click callback llamado con event=mouse_press, button=1\n",
-      "INFO: Coordenadas asignadas: X=6600.40, Y=2596.86\n",
-      "[INFO] Coordenadas asignadas: X=6600.40, Y=2596.86\n",
-      "Callback removido. Si quieres volver a escoger el centro, pulsa el botón otra vez.\n",
-      "INFO: Círculo creado en torno a (6600.40, 2596.86) con radio=484.60.\n",
-      "Total de células consideradas: 800 (de 81305).\n",
-      "Círculo 'dysplasia_FA_HN14_1' creado. Radio aprox: 484.60\n",
-      "INFO: Haz clic en la imagen para escoger el centro...\n",
-      "Botón 'Seleccionar centro con click' presionado. Registrando callback...\n",
-      "Callback get_click ADJUNTADO a image_layer.mouse_drag_callbacks\n",
-      "** get_click callback llamado con event=mouse_press, button=3\n",
-      "INFO: Haz clic en la imagen para escoger el centro...\n",
-      "Botón 'Seleccionar centro con click' presionado. Registrando callback...\n",
-      "Callback get_click ADJUNTADO a image_layer.mouse_drag_callbacks\n",
-      "** get_click callback llamado con event=mouse_press, button=1\n",
-      "INFO: Coordenadas asignadas: X=7386.30, Y=7873.86\n",
-      "[INFO] Coordenadas asignadas: X=7386.30, Y=7873.86\n",
-      "Callback removido. Si quieres volver a escoger el centro, pulsa el botón otra vez.\n",
-      "INFO: Círculo creado en torno a (7386.30, 7873.86) con radio=1136.76.\n",
-      "Total de células consideradas: 800 (de 81305).\n",
-      "Círculo 'dysplasia_FA_HN14_2' creado. Radio aprox: 1136.76\n",
-      "** get_click callback llamado con event=mouse_press, button=3\n",
-      "** get_click callback llamado con event=mouse_press, button=3\n",
-      "** get_click callback llamado con event=mouse_press, button=3\n",
-      "INFO: Haz clic en la imagen para escoger el centro...\n",
-      "Botón 'Seleccionar centro con click' presionado. Registrando callback...\n",
-      "Callback get_click ADJUNTADO a image_layer.mouse_drag_callbacks\n",
-      "** get_click callback llamado con event=mouse_press, button=1\n",
-      "INFO: Coordenadas asignadas: X=7486.18, Y=8030.81\n",
-      "[INFO] Coordenadas asignadas: X=7486.18, Y=8030.81\n",
-      "Callback removido. Si quieres volver a escoger el centro, pulsa el botón otra vez.\n",
-      "INFO: Círculo creado en torno a (7486.18, 8030.81) con radio=942.06.\n",
-      "Total de células consideradas: 500 (de 81305).\n",
-      "Círculo 'dysplasia_FA_HN14_2' creado. Radio aprox: 942.06\n",
-      "INFO: Haz clic en la imagen para escoger el centro...\n",
-      "Botón 'Seleccionar centro con click' presionado. Registrando callback...\n",
-      "Callback get_click ADJUNTADO a image_layer.mouse_drag_callbacks\n",
-      "** get_click callback llamado con event=mouse_press, button=1\n",
-      "INFO: Coordenadas asignadas: X=6580.15, Y=2630.31\n",
-      "[INFO] Coordenadas asignadas: X=6580.15, Y=2630.31\n",
-      "Callback removido. Si quieres volver a escoger el centro, pulsa el botón otra vez.\n",
-      "INFO: Círculo creado en torno a (6580.15, 2630.31) con radio=392.13.\n",
-      "Total de células consideradas: 500 (de 81305).\n",
-      "Círculo 'dysplasia_FA_HN14_2_new' creado. Radio aprox: 392.13\n",
-      "INFO: Total cells within \"dysplasia_FA_HN14_2_new\": 499\n",
-      "Total cells within \"dysplasia_FA_HN14_2_new\": 499\n",
-      "INFO: Total cells within \"dysplasia_FA_HN14_2\": 498\n",
-      "Total cells within \"dysplasia_FA_HN14_2\": 498\n",
-      "INFO: Total cells within \"dysplasia_FA_HN14_2\": 498\n",
-      "Total cells within \"dysplasia_FA_HN14_2\": 498\n",
-      "INFO: Total cells within \"dysplasia_FA_HN14_2\": 498\n",
-      "Total cells within \"dysplasia_FA_HN14_2\": 498\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<napari._qt.widgets.qt_viewer_dock_widget.QtViewerDockWidget at 0x79b539f8d1f0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -734,14 +598,14 @@
     "#viewer.window.add_dock_widget(open_mask)\n",
     "#viewer.window.add_dock_widget(load_shapes)\n",
     "#viewer.window.add_dock_widget(save_contrast_limits)\n",
-    "viewer.window.add_dock_widget(save_shapes)\n",
+    "#viewer.window.add_dock_widget(save_shapes)\n",
     "#viewer.window.add_dock_widget(cut_mask)\n",
-    "viewer.window.add_dock_widget(count_selected_cells)\n",
+    "#viewer.window.add_dock_widget(count_selected_cells)\n",
     "#viewer.window.add_dock_widget(save_selected_cells)\n",
-    "viewer.window.add_dock_widget(view_metadata)\n",
+    "#viewer.window.add_dock_widget(view_metadata)\n",
     "#viewer.window.add_dock_widget(close_all)\n",
     "#viewer.window.add_dock_widget(voronoi_plot)\n",
-    "viewer.window.add_dock_widget(create_circle_for_n_cells)\n",
+    "#viewer.window.add_dock_widget(create_circle_for_n_cells)\n",
     "viewer.window.add_dock_widget(pick_center_button)\n"
    ]
   }
