Improvements and corrections

--- a/Processing/outdated files/vizualization/Napari-TMA.ipynb
+++ b/Processing/outdated files/vizualization/Napari-TMA.ipynb
@@ -736,7 +736,7 @@
     "#viewer.window.add_dock_widget(save_contrast_limits)\n",
     "viewer.window.add_dock_widget(save_shapes)\n",
     "#viewer.window.add_dock_widget(cut_mask)\n",
-    "viewer.window.add_dock_widget(count_selected_cells)\n",
+    "#viewer.window.add_dock_widget(count_selected_cells)\n",
     "#viewer.window.add_dock_widget(save_selected_cells)\n",
     "viewer.window.add_dock_widget(view_metadata)\n",
     "#viewer.window.add_dock_widget(close_all)\n",
@@ -762,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
