Improvements and corrections

--- a/Analysis/STalign/STalign.ipynb
+++ b/Analysis/STalign/STalign.ipynb
@@ -39,9 +39,7 @@
   {
    "cell_type": "markdown",
    "id": "f32f1ff6-9f1d-4268-a060-737bec4ccab8",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Create the .npz files"
    ]
@@ -128,18 +126,18 @@
     "\n",
     "\n",
     "\n",
-    "Example: \n",
+    "Examples: \n",
     "\n",
     "` python point_annotator.py /media/cruz/TOSHIBA_EXT/virtual_tma/FA_try-2/landmarcks/FAHNSCC_14_HE.npz /media/cruz/TOSHIBA_EXT/virtual_tma/FA_try-2/landmarcks/FAHNSCC_14.npz`  \n",
-    "\n"
+    "\n",
+    "\n",
+    "` python point_annotator.py /media/cruz-osuna/Spatial/virtual_tma/ONCOSYS-OVA/STalign/Landmarck_points/H144_iOmeHE.npz /media/cruz-osuna/Spatial/virtual_tma/ONCOSYS-OVA/STalign/Landmarck_points/H144_iOme.npz`  "
    ]
   },
   {
    "cell_type": "markdown",
    "id": "b4f1c828-6efc-4cf0-8d84-f08fbd70e38d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Run the alignement\n"
    ]
@@ -151,14 +149,90 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'matplotlib'",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Skipping line 5367575: field larger than field limit (131072)\n",
+      "Skipping line 5372168: field larger than field limit (131072)\n",
+      "Skipping line 5376761: field larger than field limit (131072)\n",
+      "Skipping line 5381352: field larger than field limit (131072)\n",
+      "Skipping line 5385945: field larger than field limit (131072)\n",
+      "Skipping line 5390541: field larger than field limit (131072)\n",
+      "Skipping line 5395132: field larger than field limit (131072)\n",
+      "Skipping line 5399724: field larger than field limit (131072)\n",
+      "Skipping line 5404315: field larger than field limit (131072)\n",
+      "Skipping line 5408906: field larger than field limit (131072)\n",
+      "Skipping line 5413501: field larger than field limit (131072)\n",
+      "Skipping line 5418094: field larger than field limit (131072)\n",
+      "Skipping line 5422685: field larger than field limit (131072)\n",
+      "Skipping line 5427278: field larger than field limit (131072)\n",
+      "Skipping line 5431869: field larger than field limit (131072)\n",
+      "Skipping line 5436458: field larger than field limit (131072)\n",
+      "Skipping line 5441048: field larger than field limit (131072)\n",
+      "Skipping line 5445640: field larger than field limit (131072)\n",
+      "Skipping line 5450230: field larger than field limit (131072)\n",
+      "Skipping line 5454818: field larger than field limit (131072)\n",
+      "Skipping line 5459411: field larger than field limit (131072)\n",
+      "Skipping line 5463998: field larger than field limit (131072)\n",
+      "Skipping line 5468585: ',' expected after '\"'\n",
+      "Skipping line 5473171: field larger than field limit (131072)\n",
+      "Skipping line 5480053: field larger than field limit (131072)\n",
+      "Skipping line 5484646: field larger than field limit (131072)\n",
+      "Skipping line 5489232: field larger than field limit (131072)\n",
+      "Skipping line 5493816: field larger than field limit (131072)\n",
+      "Skipping line 5498403: field larger than field limit (131072)\n",
+      "Skipping line 5502988: field larger than field limit (131072)\n",
+      "Skipping line 5507577: field larger than field limit (131072)\n",
+      "Skipping line 5512166: field larger than field limit (131072)\n",
+      "Skipping line 5516751: field larger than field limit (131072)\n",
+      "Skipping line 5521336: field larger than field limit (131072)\n",
+      "Skipping line 5525925: field larger than field limit (131072)\n",
+      "Skipping line 5530511: field larger than field limit (131072)\n",
+      "Skipping line 5535098: field larger than field limit (131072)\n",
+      "Skipping line 5539685: field larger than field limit (131072)\n",
+      "Skipping line 5544274: field larger than field limit (131072)\n",
+      "Skipping line 5548862: field larger than field limit (131072)\n",
+      "Skipping line 5553450: field larger than field limit (131072)\n",
+      "Skipping line 5558040: field larger than field limit (131072)\n",
+      "Skipping line 5562626: field larger than field limit (131072)\n",
+      "Skipping line 5567213: field larger than field limit (131072)\n",
+      "Skipping line 5571800: field larger than field limit (131072)\n",
+      "Skipping line 5576385: field larger than field limit (131072)\n",
+      "Skipping line 5580975: field larger than field limit (131072)\n",
+      "Skipping line 5585561: field larger than field limit (131072)\n",
+      "Skipping line 5590148: field larger than field limit (131072)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "===================== ERROR ======================\n",
+      "FAILURE: Cell data error: Missing columns: X_centroid, Y_centroid\n",
+      "\n",
+      "Troubleshooting steps:\n",
+      "1. Try increasing 'max_split_size' parameter\n",
+      "2. Reduce 'batch_size' in PARAMS['batch']\n",
+      "3. Increase 'raster_resolution' in main PARAMS\n",
+      "==================================================\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Cell data error: Missing columns: X_centroid, Y_centroid",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 7\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124;03mSTalign-based H&E to t-CycIF Alignment Pipeline\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;03mWith GPU Memory Optimizations and Batch Processing\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 97\u001b[39m, in \u001b[36mload_cell_data\u001b[39m\u001b[34m(path)\u001b[39m\n\u001b[32m     96\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m missing:\n\u001b[32m---> \u001b[39m\u001b[32m97\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mMissing columns: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m, \u001b[39m\u001b[33m'\u001b[39m.join(missing)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     99\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m df, np.array(df[\u001b[33m'\u001b[39m\u001b[33mX_centroid\u001b[39m\u001b[33m'\u001b[39m]), np.array(df[\u001b[33m'\u001b[39m\u001b[33mY_centroid\u001b[39m\u001b[33m'\u001b[39m])\n",
+      "\u001b[31mValueError\u001b[39m: Missing columns: X_centroid, Y_centroid",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 300\u001b[39m\n\u001b[32m    297\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m\n\u001b[32m    299\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[34m__name__\u001b[39m == \u001b[33m'\u001b[39m\u001b[33m__main__\u001b[39m\u001b[33m'\u001b[39m:\n\u001b[32m--> \u001b[39m\u001b[32m300\u001b[39m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 260\u001b[39m, in \u001b[36mmain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    257\u001b[39m XI = np.arange(he_data.shape[\u001b[32m2\u001b[39m]) * \u001b[32m1.0\u001b[39m\n\u001b[32m    258\u001b[39m he_image = {\u001b[33m'\u001b[39m\u001b[33mdata\u001b[39m\u001b[33m'\u001b[39m: he_data, \u001b[33m'\u001b[39m\u001b[33mX\u001b[39m\u001b[33m'\u001b[39m: XI, \u001b[33m'\u001b[39m\u001b[33mY\u001b[39m\u001b[33m'\u001b[39m: YI}\n\u001b[32m--> \u001b[39m\u001b[32m260\u001b[39m df, x_coords, y_coords = \u001b[43mload_cell_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mPATHS\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcell_data\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    262\u001b[39m \u001b[38;5;66;03m# Rasterize cells\u001b[39;00m\n\u001b[32m    263\u001b[39m XJ, YJ, rasterized = rasterize_cells(x_coords, y_coords, PARAMS[\u001b[33m'\u001b[39m\u001b[33mraster_resolution\u001b[39m\u001b[33m'\u001b[39m])\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 101\u001b[39m, in \u001b[36mload_cell_data\u001b[39m\u001b[34m(path)\u001b[39m\n\u001b[32m     99\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m df, np.array(df[\u001b[33m'\u001b[39m\u001b[33mX_centroid\u001b[39m\u001b[33m'\u001b[39m]), np.array(df[\u001b[33m'\u001b[39m\u001b[33mY_centroid\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m    100\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m--> \u001b[39m\u001b[32m101\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCell data error: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(e)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mRuntimeError\u001b[39m: Cell data error: Missing columns: X_centroid, Y_centroid"
      ]
     }
    ],
@@ -183,11 +257,11 @@
     "\n",
     "# Configuration - Update these paths as needed\n",
     "PATHS = {\n",
-    "    'he_image': Path(r\"/media/cruz/TOSHIBA_EXT/virtual_tma/FA_try-2/FAHNSCC-14_H&E.png\"),\n",
-    "    'cell_data': Path(r\"/media/cruz/TOSHIBA_EXT/virtual_tma/FA_try-2/cell_data.csv\"),\n",
-    "    'landmarks_he': Path(r\"/media/cruz/TOSHIBA_EXT/virtual_tma/FA_try-2/landmarcks/FAHNSCC_14_HE_points.npy\"),\n",
-    "    'landmarks_cycif': Path(r\"/media/cruz/TOSHIBA_EXT/virtual_tma/FA_try-2/landmarcks/FAHNSCC_14_points.npy\"),\n",
-    "    'output': Path(r\"/media/cruz/TOSHIBA_EXT/virtual_tma/FA_try-2/output/FAHNSCC_14.csv.gz\")\n",
+    "    'he_image': Path(r\"/media/cruz-osuna/Spatial/virtual_tma/ONCOSYS-OVA/STalign/H144_iOme2_PE_II_HE.png\"),\n",
+    "    'cell_data': Path(r\"/media/cruz-osuna/Spatial/virtual_tma/ONCOSYS-OVA/STalign/data_20230616.csv\"),\n",
+    "    'landmarks_he': Path(r\"/media/cruz-osuna/Spatial/virtual_tma/ONCOSYS-OVA/STalign/Landmarck_points/H144_iOmeHE_points.npy\"),\n",
+    "    'landmarks_cycif': Path(r\"/media/cruz-osuna/Spatial/virtual_tma/ONCOSYS-OVA/STalign/Landmarck_points/H144_iOme_points.npy\"),\n",
+    "    'output': Path(r\"/media/cruz-osuna/Spatial/virtual_tma/ONCOSYS-OVA/STalign/output/H144_iOme2_PE_II.csv.gz\")\n",
     "}\n",
     "\n",
     "PARAMS = {\n",
@@ -482,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
